--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div  class="col-md-6">
                         <div class="header-top-content">
                             <ul class="nav nav-pills navbar-left">
-                                <li><a href="#"><i class="pe-7s-call"></i><span>+7-915-229-29-08</span></a></li>
+                                <li><a href="#"><i class="pe-7s-call"></i><span>+7(915)229-29-08</span></a></li>
                                 <li><a href="#"><i class="pe-7s-mail"></i><span> info@petrovskii.ru</span></a></li>
                             </ul>
                         </div>
@@ -64,18 +64,17 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><b>M</b>art</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#">Главная</a></li>
-                            <li><a href="#">Новости</a></li>
-                            <li><a href="#">Цены</a></li>
-                            <li><a href="#">Гостевые Дома</a></li>
-                            <li><a href="#">Продукция</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="news.html">Новости</a></li>
+                            <li><a href="prices.html">Цены</a></li>
+                            <li><a href="guesthouses.html">Гостевые Дома</a></li>
+                            <li><a href="products.html">Продукция</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right cart-menu">
                         <!-- <li><a href="#" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a></li>
@@ -148,14 +147,14 @@
         <section class="service-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-sm-6 wow fadeInRight animated" data-wow-delay="0.1s">
+                    <div class="col-md-4 col-sm-4 wow fadeInRight animated" data-wow-delay="0.1s">
                         <div class="service-item">
                             <i class="pe-7s-settings"></i>
                             <h3>Семейный отдых</h3>
                             <p>Наш водоём один из немногих, который предлагает именно семейный отдых, каждый новый шаг в развитии нацелен на то, что бы наши гости могли провести свободное время со своими близкими людьми.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 wow fadeInRight animated" data-wow-delay="0.2s">
+                    <div class="col-md-4 col-sm-4 wow fadeInRight animated" data-wow-delay="0.2s">
                         <div class="service-item">
                             <i class="pe-7s-safe"></i>
                             <h3>Хорошая экология</h3>
@@ -169,7 +168,7 @@
                             <p>Lorem ipsum dolor sit amet, vix erat audiam ei. Cum doctus civibus efficiantur in. Nec id tempor imperdiet deterruisset, doctus volumus explicari qui ex, appareat similique an usu.</p>
                         </div>
                     </div> -->
-                    <div class="col-md-4 col-sm-6 wow fadeInRight animated" data-wow-delay="0.4s">
+                    <div class="col-md-4 col-sm-4 wow fadeInRight animated" data-wow-delay="0.4s">
                         <div class="service-item">
                             <i class="pe-7s-headphones"></i>
                             <h3>Удобное расположение</h3>
